src/objects/Committees__c.object
<CustomObject>
    <description>[OLD] AACR committees that are invitation only or members are elected to.</description>
    <fields>
        <fullName>Committee_Member_Role__c</fullName>
        <label>Committee Member Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory Editors</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Associate Editor</fullName>
                </value>
                <value>
                    <fullName>Biostatistical Editor</fullName>
                </value>
                <value>
                    <fullName>Breaking Insights Editor</fullName>
                </value>
                <value>
                    <fullName>Cancer Survivor</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>Chairman and President</fullName>
                </value>
                <value>
                    <fullName>Chairperson</fullName>
                </value>
                <value>
                    <fullName>Chairperson-Elect</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Clinical Lead</fullName>
                </value>
                <value>
                    <fullName>Co-Chairperson</fullName>
                </value>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor for Breaking Insights</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor for Controversy and Consensus</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor for Reviews</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Early Career Investigator</fullName>
                </value>
                <value>
                    <fullName>Editor for Controvery and Consensus</fullName>
                </value>
                <value>
                    <fullName>Editorial Board Member</fullName>
                </value>
                <value>
                    <fullName>Editor-in-Chief</fullName>
                </value>
                <value>
                    <fullName>Executive Editor</fullName>
                </value>
                <value>
                    <fullName>Ex-Officio</fullName>
                </value>
                <value>
                    <fullName>Fellow</fullName>
                </value>
                <value>
                    <fullName>Founding Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Founding Chairman of the Board and President Emeritus</fullName>
                </value>
                <value>
                    <fullName>Graduate/Medical Student</fullName>
                </value>
                <value>
                    <fullName>Immediate Past President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Committee_Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Item in the eStore this committee is related to.</description>
        <label>Committee Related To</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Related Committee Item</relationshipLabel>
        <relationshipName>Committees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committees__c</fullName>
        <label>Committees</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Committees</relationshipLabel>
        <relationshipName>Committees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_From__c</fullName>
        <description>Date a given member joined the committee</description>
        <inlineHelpText>Date a given member joined the committee</inlineHelpText>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Through__c</fullName>
        <description>Date a given member exited the committee</description>
        <inlineHelpText>Date a given member exited the committee</inlineHelpText>
        <label>Date Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dropped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Departure of committee member from a group</description>
        <label>Dropped</label>
        <type>Checkbox</type>
    </fields>
    <label>Committees</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>